--- a/Sending-Email-with-Node/package.json
+++ b/Sending-Email-with-Node/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "hbs": "^4.0.6",
     "nodemailer": "^6.3.1"
   }
 }
