--- a/Sending-Email-with-Node/package.json
+++ b/Sending-Email-with-Node/package.json
@@ -4,7 +4,7 @@
   "description": "Sending Email with nodejs",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Rahul Bera",
   "license": "ISC",
